--- a/index.html
+++ b/index.html
@@ -25,21 +25,22 @@
 
     <div class="container">
       <header class="header full-width-padd">
-        <a href="#">
+        <a href="#" class="header__logo">
           <img
             src="./public/images/logo.svg"
             alt="Логотип приложения WeatherApp"
             width="192"
-            height="30"
+            height="48"
           />
         </a>
-        <form class="header__search">
+        <form class="header__search" id="header__search">
           <input
             type="text"
             class="header__input"
             name="search"
             id="searchInput"
             placeholder="Поиск по городу"
+            autocomplete="off"
           />
           <button type="button" id="searchInputButton" aria-label="Начать поиск" tabindex="-1">
             <svg class="icon">
