--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <div class="container">
       <header class="header full-width-padd">
-        <a href="#" class="header__logo">
+        <a href="#" class="header__logo" tabindex="0">
           <img
             src="./public/images/logo.svg"
             alt="Логотип приложения WeatherApp"
@@ -92,7 +92,7 @@
             </button>
           </div>
           <div class="weather__forecast-slider">
-            <button class="slider__button" type="button">
+            <button class="slider__button" type="button" disabled>
               <svg class="icon-slider">
                 <use href="./public/icons-sprite.svg#arrow" id="arrow"></use>
               </svg>
