начинаю мучать прогресс бар

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
           </picture>
         </a>
         <form class="header__search" id="header__search">
+          <label for="searchInput" class="screen-reader-only">Поиск по городу</label>
           <input
             type="text"
             class="header__input"
@@ -105,7 +106,7 @@
               на 5 дней
             </button>
           </div>
-          <div class="weather__forecast-slider">
+          <div class="weather__forecast-slider slider">
             <button class="slider__button" type="button" disabled>
               <svg class="icon-slider">
                 <use href="./public/icons-sprite.svg#arrow" id="arrow"></use>
@@ -122,7 +123,7 @@
       </main>
       <footer class="footer">
         Проект выполнен в рамках стажировки &nbsp;
-        <a href="https://preax.ru" target="_blank">PREAX</a>
+        <a href="https://preax.ru" target="_blank" rel="noopener noofferer">PREAX</a>
       </footer>
     </div>
   </body>
