--- a/index.html
+++ b/index.html
@@ -55,11 +55,13 @@
             placeholder="Поиск по городу"
             autocomplete="off"
           />
-          <button type="button" id="searchInputButton" aria-label="Начать поиск" tabindex="-1">
-            <svg class="icon">
-              <use href="./public/icons-sprite.svg#iconSearch" id="iconInput"></use>
-            </svg>
-          </button>
+          <button
+            class="header__search-btn"
+            type="button"
+            id="searchInputButton"
+            aria-label="Начать поиск"
+            tabindex="-1"
+          ></button>
         </form>
       </header>
       <main class="weather full-width-padd">
