--- a/index.html
+++ b/index.html
@@ -108,22 +108,26 @@
           </div>
           <div class="weather__forecast-slider slider">
             <button class="slider__button" type="button" disabled>
-              <svg class="icon-slider">
-                <use href="./public/icons-sprite.svg#arrow" id="arrowLeft"></use>
-              </svg>
+              <img src="./public/chevron.svg" alt="прокрутка влево" class="slider__button-left" />
             </button>
             <ul class="slider__list" id="slider__list"></ul>
             <button class="slider__button" type="button">
-              <svg class="icon-slider">
-                <use href="./public/icons-sprite.svg#arrow" id="arrowRigth"></use>
-              </svg>
+              <img
+                src="./public/chevron.svg"
+                alt="прокрутка вправо"
+                class="slider__button-right"
+                width="24"
+                height="24"
+              />
             </button>
           </div>
         </section>
       </main>
       <footer class="footer full-width-padd">
-        <span>Проект выполнен в рамках стажировки &nbsp;</span>
-        <a href="https://preax.ru" target="_blank" rel="noopener nooferrer">PREAX</a>
+        <span
+          >Проект выполнен в рамках стажировки
+          <a href="https://preax.ru" target="_blank" rel="noopener noreferrer">PREAX</a></span
+        >
       </footer>
     </div>
   </body>
